--- a/_posts/2020-04-11-Covid-19-TD.md
+++ b/_posts/2020-04-11-Covid-19-TD.md
@@ -9,7 +9,7 @@ header:
   overlay_color: "#000"
   overlay_filter: "0.5"
   overlay_image: assets/images/wide/wconsultancy.jpg
-  teaser: assets/images/cuadrado/wave3.jpg
+  teaser: assets/images/cuadrado/exito.jpg
 categories:
   - Proyectos
 ---
@@ -27,7 +27,7 @@ Habiéndo dicho lo anterior, quiero abordar este artículo de opinión, desde lo
 Si bien hoy sabemos que no es la tecnología y su adquisición el único garante para lograr la transformación digital TD, es de vital importancia contar con los medios elementales para soportar estas interacciones. La llegada del Covid-19 dejó ver las falencias a nivel tecnológico que tienen la empresas e instituciones en países en vía de desarrollo como el nuestro. La medida de “Home Office” por ejemplo, que tomaron algunas organizaciones, mostró la falta de preparación que tenemos aún, sin embargo, esto abrió la puerta para que de forma reactiva, nos montáramos en este “bus”. 
 Por otra parte,  las instituciones gubernamentales y de salud, también han tenido avances a pasos agigantados en términos digitales, especialmente en áreas cómo;  **Big Data, Business Intelillence y analítica**. Dashboard como el que vemos a continuación, están al alcance de los cuidadanos para conocer el comportamiento que está teniedo esta pandemia.
 
-![dashboard covid-19](assets\images\post\Covid-19-TD\Dashboard_covid-19.png)
+![dashboard covid-19](/assets/images/post/Covid-19-TD/Dashboard_covid-19.png)
 
 
 ## Procesos:
