--- a/_posts/2020-04-11-Covid-19-TD.md
+++ b/_posts/2020-04-11-Covid-19-TD.md
@@ -8,7 +8,7 @@ excerpt: "La aparición del Covid-19 supone un nuevo precedente para la humanida
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
-  overlay_image: assets/images/wide/wconsultancy.jpg
+  overlay_image: assets/images/wide/Transformation.jpg
   teaser: assets/images/cuadrado/exito.jpg
 categories:
   - Proyectos
@@ -38,5 +38,8 @@ Por otra parte,  las instituciones gubernamentales y de salud, también han teni
 
   No hay duda en que este es el componente más complejo en el panorama (Tecnología, Procesos, Personas), no obstante, aunque pueda sonar frase cliché, las grandes catástrofes traen consigo avances y desarrollo especialmente en nuestra manera de vivir.
 En el último mes hemos visto como millones de personas alrededor del mundo han estado adoptando tecnologías y procesos digitales de forma muy rápida, para comunicación, trabajo en equipo, adquisición de bienes y servicios, ocio y un largo etc. Las empresas a través de sus “jefes”, también han dado un gran paso a nivel de confianza, que ya sea coaccionada por la situación,  permitió temas como **HomeOffice**, que en otro escenario no hubiese sido posible. Sin planeación  y de manera directa, esto contribuye significativamente con el avance en la madurez de la **cultura digital**.
+
+![dashboard covid-19](/assets/images/post/Covid-19-TD/Familia.jpg)
+
 
 El mundo cambió y es lo único que tenemos claro, al igual que en otros momentos de la historia, tendrémos que ser resilientes y afrontar lo que venga con una “mentalidad fuera de caja".
