--- a/_posts/2020-04-11-Covid-19-TD.md
+++ b/_posts/2020-04-11-Covid-19-TD.md
@@ -22,19 +22,18 @@ Habiéndo dicho lo anterior, quiero abordar este artículo de opinión, desde lo
 
 ![Frentes TD Autor](/assets/images/post/Covid-19-TD/Frentes_TD_Autor.png)
 
-## Tecnología:
+## Tecnología
 
 Si bien hoy sabemos que no es la tecnología y su adquisición el único garante para lograr la transformación digital TD, es de vital importancia contar con los medios elementales para soportar estas interacciones. La llegada del Covid-19 dejó ver las falencias a nivel tecnológico que tienen la empresas e instituciones en países en vía de desarrollo como el nuestro. La medida de “Home Office” por ejemplo, que tomaron algunas organizaciones, mostró la falta de preparación que tenemos aún, sin embargo, esto abrió la puerta para que de forma reactiva, nos montáramos en este “bus”. 
 Por otra parte,  las instituciones gubernamentales y de salud, también han tenido avances a pasos agigantados en términos digitales, especialmente en áreas cómo;  **Big Data, Business Intelillence y analítica**. Dashboard como el que vemos a continuación, están al alcance de los cuidadanos para conocer el comportamiento que está teniedo esta pandemia.
 
 ![dashboard covid-19](/assets/images/post/Covid-19-TD/Dashboard_covid-19.png)
 
-
-## Procesos:
+## Procesos
 
  Sin entrar en mucho detalle, la frase “Quédate en casa”, conlleva a un esfuerzo enorme por parte de las empresas y organizaciones, de flexibilizar y reinventar muchos de sus procesos para lograr dar respuesta a una demanda extremadamente alta de servicios online y domicilios, entre otras cosas. Sin lugar a duda, el sector bancario es el de mayor grado de madurez en este tipo de procesos, sin embargo, por estos días encontramos muchas personas que aún “necesitan” hacer los trámites de forma presencial, lo que nos lleva al siguiente frente relacionado con nuestra cultura.
 
-## Personas:
+## Personas
 
   No hay duda en que este es el componente más complejo en el panorama (Tecnología, Procesos, Personas), no obstante, aunque pueda sonar frase cliché, las grandes catástrofes traen consigo avances y desarrollo especialmente en nuestra manera de vivir.
 En el último mes hemos visto como millones de personas alrededor del mundo han estado adoptando tecnologías y procesos digitales de forma muy rápida, para comunicación, trabajo en equipo, adquisición de bienes y servicios, ocio y un largo etc. Las empresas a través de sus “jefes”, también han dado un gran paso a nivel de confianza, que ya sea coaccionada por la situación,  permitió temas como **HomeOffice**, que en otro escenario no hubiese sido posible. Sin planeación  y de manera directa, esto contribuye significativamente con el avance en la madurez de la **cultura digital**.
