--- a/_posts/2020-04-11-Covid-19-TD.md
+++ b/_posts/2020-04-11-Covid-19-TD.md
@@ -41,4 +41,4 @@ En el último mes hemos visto como millones de personas alrededor del mundo han 
 ![dashboard covid-19](/assets/images/post/Covid-19-TD/Familia.jpg)
 
 
-El mundo cambió y es lo único que tenemos claro, al igual que en otros momentos de la historia, tendrémos que ser resilientes y afrontar lo que venga con una “mentalidad fuera de caja".
+El mundo cambió y es lo único que tenemos claro, al igual que en otros momentos de la historia, tendrémos que ser resilientes y afrontar lo que venga con una **“mentalidad fuera de caja"**.
